[package]
name = "obrc_rust"
version = "0.1.0"
edition = "2021"

[profile.profiling]
inherits = "release"
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4.14"
simple_logger = "4.0.0"